ProjetCompil/Verif/Test/fail/typeNonCompatible11.cas
program
	A : 1..10;
	B : 1..15;
	C : real;
begin
	A := C mod B;
end.
	
